[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vimbench"
version = "0.2.0"
description = "vimbench."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "accelerate", "einops", "fastapi", "gradio==3.23", "markdown2[all]", "numpy",
    "requests", "sentencepiece", "tokenizers==0.12.1",
    "torch", "torchvision", "uvicorn", "wandb",
    "shortuuid",
    "deepspeed==0.9.2", "peft==0.3.0",
    "transformers @ git+https://github.com/huggingface/transformers.git@cae78c46"
]

[project.urls]
"Homepage" = "https://yujielu10.github.io/"
"Bug Tracker" = "https://github.com/VIM-Bench/VIM-Bench.github.io/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]